# data-engineering-zoomcamp

./: .dockerignore  .env.dist  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yaml  poetry.toml  pyproject.toml
infrastructure/: variables.tf
